[package]
name = "bft-rs"
version = "0.1.0"
authors = ["Eason Gao <kaoimin@qq.com>", "Cryptape Technologies <contact@cryptape.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cryptape/bft-rs"
homepage = "https://github.com/cryptape/bft-rs"
description = """
An efficent and stable Rust library of BFT protocol for distributed system.
"""

[dependencies]
bincode = {version = "0.8.0"}
crossbeam = {version = "0.7"}
lru-cache = {version = "0.1"}
log = {version = "0.4.3"}
min-max-heap = {version = "1.2.0"}
serde = {version = "1.0"}
serde_derive = {version = "1.0"}
time = {version = "0.1.36"}

[dev-dependencies]
csv = "1.0"
env_logger = "0.6.0"
rand = "0.5.5"
