[package]
name = "bft-rs"
version = "0.2.0-alpha"
authors = ["Eason Gao <kaoimin@qq.com>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cryptape/bft-rs"
homepage = "https://github.com/cryptape/bft-rs"
description = """
An efficient and stable Rust library of BFT protocol for distributed system.
"""

[dependencies]
bincode = "0.8.0"
crossbeam = "0.7"
lru-cache = "0.1"
log = "0.4.3"
min-max-heap = "1.2.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.36"

[dev-dependencies]
env_logger = "0.6.0"
rand = "0.5.5"

[features]
default = []
verify_req = []
