[package]
name = "bft-rs"
version = "0.2.0-alpha"
authors = ["Eason Gao <kaoimin@qq.com>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cryptape/bft-rs"
homepage = "https://github.com/cryptape/bft-rs"
description = """
An efficient and stable Rust library of BFT protocol for distributed system.
"""

[dependencies]
bincode = "0.8.0"
crossbeam = "0.7"
crossbeam-utils = "0.6.5"
hex_fmt = "0.3.0"
lru-cache = "0.1"
log = "0.4.3"
min-max-heap = "1.2.0"
rand = "0.5.5"
rand_core = "0.3.1"
rand_pcg = "0.1.2"
rlp = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1.36"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }

[dev-dependencies]
env_logger = "0.6.0"
digest-hash = "0.3.0"
log4rs = "0.8.0"
sha2 = "0.8.0"


[features]
default = ["secp256k1", "sha3hash"]
verify_req = []
machine_gun = []
random_proposer = []
compact_block = []
secp256k1 = ["proof/secp256k1"]
sha3hash = ["proof/sha3hash"]
