[package]
name = "consensus"
version = "0.0.1"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
bincode = "0.8.0"
bft-rs = {path = "../bft"}
crypto-hash = "0.3.1"
ethereum-types = "0.3.2"
log = "=0.4.3"
engine = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1","engine/secp256k1"]
sha3hash = ["util/sha3hash", "libproto/sha3hash", "proof/sha3hash", "engine/sha3hash"]